# pytrans

./: app.py  pyproject.toml  pytrans.py
enums/: plugin_type.py
jsons/: languages.json
locales/: cs.json  en.json
models/: plugin.py
services/: localization_service.py  plugin_loader.py  plugin_registry.py  plugin_validation.py  rtl_service.py  settings_service.py
settings/: settings.json
themes/: as400.tcss
ui/: icons.py  palette.py
ui/views/: hub.py
